only left beautiful face & artist selected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_top_tracks">Top 10 tracks</string>
+    <string name="no_track_found_msg">No tracks found for this artist</string>
+    <string name="no_artist_found">No artist found. Maybe the name you entered is not correct?</string>
 
 
 </resources>
