--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="no_artist_found">No artist found. Maybe the name you entered is not correct?</string>
     <string name="enter_artist_name">Enter an artist name</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
